add config and 01

--- a/homework/01.markdown
+++ b/homework/01.markdown
@@ -38,7 +38,6 @@ __Part 3__  - Scrabble Pal
 
 Create a scrabble solver. It will allow you to enter a string of letters... and it will output the 5 highest scoring words that can be constructed from those letters. The scores for each word are on these [rules](https://en.wikibooks.org/wiki/Scrabble/Rules#Scoring), using the following [letter values](http://www.wordfind.com/scrabble-letter-values/). 
 
-See the [sample output](#hw01-scrabble-pal-sample) at the end of these instructions.
 
 ### Objectives
 
@@ -91,7 +90,7 @@ Assuming that you've already:
 
 You can then go through the following steps to clone your repository and commit your first changes:
 
-1. ...go to the [class github page](https://github.com/nyu-csci-ua-0480-008-spring-2018)
+1. ...go to the [class github page]({{site.vars.github_org}})
 2. find the repository that starts with your NYU NetID and ends with homework01 (for example, jjv222-homework01) 
 3. on the repository's page, use the green "Clone or download" button on the right side of the screen to copy the HTTPS clone URL to __clone__ the homework. To use the commandline client (with GITHUB_REPOSITORY_URL being the url you copied from the green button):
     <pre><code data-trim contenteditable> git clone GITHUB_REPOSITORY_URL
@@ -102,7 +101,9 @@ You can then go through the following steps to clone your repository and commit 
 	* your name and net id
 	* the title of your project: Homework #01 - Tic Tac Toe
 7. again, in the same project directory, run <code>git add README.md</code> to let git know that we're ready to "save"
-8. save your work locally by running <code>git commit -m "first commit"</code>... everything within the quotes after <code>-m</code> is any commit message you'd like
+8. save your work locally by running <code>git commit -m "add homework meta information"</code>... everything within the quotes after <code>-m</code> is any commit message you'd like
+	* please make your commit messages descriptive
+	* (what features have been added, what bug has been fixed, etc.)
 0. finally, send your work to github by running <code>git push</code> (or <code>git push origin master</code>)
 
 
@@ -118,19 +119,26 @@ You'll also install the following modules locally in your project directory:
 
 * `chai` - supplies assertions for unit tests
 * `eslint` - for catching potential errors in your code
+* `eslint-plugin-mocha` - to support linting test code
 
 Go into the directory of your cloned repository (`cd username-homework01`), and run the following commands:
 
 <pre><code data-trim contenteditable>npm install -g mocha
 npm install --save-dev eslint
 npm install --save-dev chai
+npm install --save-dev eslint-plugin-mocha
 </code></pre>
 
-Note that the last command installs a module _locally_ to your project directory. It will do two things:
+Note that the last command installs a module _locally_ to your project directory:
 
 * It will create a `package-lock.json` file that stores exact versions
 * It will make a modification to an existing file, `package.json`, within your project folder
 * It will create a `node_modules` folder where your downloaded modules are stored (this folder is included in your `.gitignore` file because these external libraries are not meant to be in your project's version control
+
+__Troubleshooting errors__
+
+* On some systems (for example, Ubuntu 18.04), you may have to use `sudo` to run `npm` as the super user
+* If any part of your code complains about a missing package, try installing it with `npm` either locally or globally (do your best to keep everything local at first, of course)
 
 
 ### Install Required Modules
@@ -144,7 +152,7 @@ You'll also need a module to help you ask the user for input.
 	* this is very different from how node.js apps usually operate
 	* however, for our purposes, using sync prompt is fine (for now), and it mimics the browser's prompt functionality well
 * check out the example usage on [readline-sync's npm page](https://www.npmjs.com/package/readline-sync)
-    * essentially: `var readlineSync = require('readline-sync');`
+    * essentially: `const readlineSync = require('readline-sync');`
     * which imports the function <code>question</code> from the <code>readline-sync</code> module into your program
 * note that installing `readline-sync` will make a modification to `package.json` as well. This modification to `package.json` should be committed and pushed as well!
 
@@ -187,58 +195,58 @@ The helper functions you'll be implementing are described below. Unit tests have
 
 ### Creating a Module / Exporting Functions 
 
-You'll be creating a module that contains a bunch of helper functions. The file that you'll be writing your module in is already included in your repository in `src/tic-tac-toe.js`. Both your _actual_ interactive Tic Tac Toe game (in Part 2) and the supplied unit tests will use this module. Note that we are __not using ES6 modules__ (it only available in the latest version of node, it is not enabled by default, and node docs still use `require` rather than ES6 `import`)
+You'll be creating a module that contains a bunch of helper functions. The file that you'll be writing your module in is already included in your repository in `src/tic-tac-toe.js`. Both your _actual_ interactive Tic Tac Toe game (in Part 2) and the supplied unit tests will use this module. Note that we are __not using ES6 modules__ (it only available in the latest version of node, it is not enabled by default, and node docs still use `require` rather than ES6 `import`).
 
 To make the functions you write available when your module is brought into another program (that is, required or _imported_), you'll have to _export_ your functions. See [this sitepoint tutorial](https://www.sitepoint.com/understanding-module-exports-exports-node-js/) or this [article](http://openmymind.net/2012/2/3/Node-Require-and-Exports/) to get a primer on modules, `exports` and using `require`. There are a few ways to do export your functions (all of the examples use `module.exports`, but they should work with just `exports` as well):
 
 1. create all of your functions ... then, at the end, assign `module.exports` to an object literal containing all of the functions that you want to export:
-	<pre><code data-trim contenteditable>function repeat(ele, n) {
+	<pre><code data-trim contenteditable>function foo(x, y) {
        // implementation
    } 
     
-   function generateBoard(rows, cols, initialValue) {
+   function bar(z) { 
        // implementation
    } 
 
-   // ...
+   // define more functions
 
    module.exports = {
-       repeat: repeat,
-       generateBoard: generateBoard,
-       // ...
+       foo: foo,
+       bar: bar,
+       // add more property name to function mappings...
    }
 </code></pre>
 2. create all of your functions in an object and assign that object to `module.exports`:
 	<pre><code data-trim contenteditable>const tic = { 
-       repeat: function(value, n) {
+       foo: function(x, y) {
            // implementation
        },
     
-       generateBoard: function(rows, columns, initialCellValue) {
+       bar: function(z) {
            // implementation
        },
     
-       // ...
+       // add more properties and their associated functions
    }
     
    module.exports = tic;
 </code></pre>
 3. Create functions as properties on `module.exports`
-	<pre><code data-trim contenteditable>module.exports.repeat = function(value, n) {
+	<pre><code data-trim contenteditable>module.exports.foo = function(x, y) {
        // implementation
    }
     
-   module.exports.generateBoard = function(rows, columns, initialCellValue) {
+   module.exports.bar = function(z) {
        // implementation
    },
     
-   // ...
+   // add more properties on module.exports
 </code></pre>
 
-When you `require` your module, the object you create for `exports` will be given back. In the example below, the module, `some-module.js` is brought in to the current file (the `./` specifies that the file is in the same directory as the current file) and is represented by the variable, `foo`. The functions can be accessed by using regular dot notation on the `foo` object:
+When you `require` your module, the object you create for `exports` will be given back. In the example below, the module, `some-module.js` is brought in to the current file (the `./` specifies that the file is in the same directory as the current file) and is represented by the variable, `someModule`. The functions can be accessed by using regular dot notation on the `someModule` object:
 
-<pre><code data-trim contenteditable>var foo = require('./some-module.js');
-foo.someFunction();
+<pre><code data-trim contenteditable>const someModule = require('./some-module.js');
+someModule.someFunction();
 </code></pre>
 
 __You should make sure your exports are up to date as you implement your functions__ so that you can run your unit tests as you complete your function implementations.
@@ -289,6 +297,7 @@ The functions make some assumptions about how you'll be representing a Tic Tac T
 3. Alternatively, we can reference a cell using a format borrowed from [chess algebraic notation](https://en.wikipedia.org/wiki/Algebraic_notation_(chess))
     * the rows are uppercase letters starting with A from the top
     * ... while the columns are numbers __starting at 1 from the left__
+	* (__this is an abomination of chess notation, where letters and rows are represented by numbers and letters respectively (sry!)__)
     * using this notation, the board with labels would like like this:
         <pre><code data-trim contenteditable>          columns
                1   2   3
@@ -323,41 +332,15 @@ index      |  0  |  1  |  2  |  3  |  4  |  5  |  6  |  7  |  8  |
 
 ### Functions to Implement
 
-<hr>
 
-### `repeat(value, n)`
-
-__Parameters:__
-
-* `value` - the value to be repeated
-* `n` - the number of times to repeat the `value`
-
-__Returns:__
-
-* an `Array` containing `n` elements, with each element being `value`
-
-__Description:__
-
-`repeat` creates an `Array` that contains `value` as each element for `n` elements. If the `value` is a reference type, it's ok if the reference is copied (that is, you don't have to worry about deep copying `value` if it's an `Object`.
-
-Hint: The `Array` methods, [push](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/push) and/or [spread](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Spread_operator)/[concat](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/concat) may be helpful here.
-
-
-__Example:__
-
-    const arr = tic.repeat("hello", 3);
-    // arr is ["hello", "hello", "hello"];
-
-<hr>
-
-### `generateBoard(rows, columns, initialCellValue)`
+### `board(rows, columns, initialCellValue)` // modify parameters to allow for default values
 
 __Parameters:__
 
 * `rows` - the number of rows in the board
 * `columns` - the number of columns in the board
-* `initialCellValue` - the initial value contained in each square
-    * default value should be space (`" "`)
+* `initialCellValue` (optional) - the initial value contained in each square
+    * default value should be empty string (`""`)
 
 __Returns:__
 
@@ -365,30 +348,32 @@ __Returns:__
 
 __Description:__
 
-Creates a single dimensional `Array` representation of a Tic Tac Toe board. The number of elements in the `Array` is the same as the number of squares in the board based on the supplied number of `rows` and `columns`. The initial value in each cell is the `initialCellValue` passed in
+Creates a single dimensional `Array` representation of a Tic Tac Toe board. The number of elements in the `Array` is the same as the number of squares in the board based on the supplied number of `rows` and `columns`. The initial value in each cell is the `initialCellValue` passed in. If `initialCellValue` is not passed in, default to space (`" "`).
 
-Use the `repeat` function that you created above to implement this function.
+A `for` loop and generous use of `push` works here, but an alternative would be to use an [`Array` constructor](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array#Syntax) (not typical, but worth doing in this case) with the [`fill` method](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/fill)
+
+
 
 __Example:__
 
     // creates a board with 9 squares
-    const board = tic.generateBoard(3, 3, " ");
-    // board is = [" ", " ", " ", " ", " ", " ", " ", " ", " ", ];
-    // (each empty cell is a space)
+    const board = tic.board(3, 3, "");
+    // board = ["", "", "", "", "", "", "", "", "", ];
+    // (each empty cell is an empty string)
 
 <hr>
 
-### `rowColToIndex(board, rowNumber, columnNumber)`
+### `toIndex(board, row, col)` // modify parameters to allow for default values
 
 __Parameters:__
 
 * `board` - the board where the `rowNumber` and `columnNumber` come from
-* `rowNumber` - the row number to be converted to an index in a one dimensional a`Array` representation
-* `columnNumber` - the column number to be converted to an index in a one dimensional a`Array` representation
+* `row` - the row number to be converted to an index in a one dimensional a`Array` representation
+* `col` - the column number to be converted to an index in a one dimensional a`Array` representation
 
 __Returns:__
 
-* a `Number`, the index that's mapped to by the given `rowNumber` and `columnNumber`
+* a `Number`, the index that's mapped to by the given `row` and `col`
 
 __Description:__
 
@@ -399,9 +384,9 @@ Hint: [Math.sqrt](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Refere
 __Example:__
 
     // translates a row and col to a single index
-    const board = tic.generateBoard(3, 3, " ");
-    const i = tic.rowColToIndex(board, 1, 1);
-    const j = tic.rowColToIndex(board, 0, 2);
+    const board = tic.board(3, 3, "");
+    const i = tic.toIndex(board, 1, 1);
+    const j = tic.toIndex(board, 0, 2);
     // i is 4 (column 1, row 1 is the same as the element at index 4)
     // j is 2
 
@@ -427,9 +412,9 @@ Hint: Again, [Math.sqrt](https://developer.mozilla.org/en-US/docs/Web/JavaScript
 __Example:__
 
     // translates an index into a row and column...
-    var board = tic.generateBoard(3, 3, " ");
-    var rowCol1 = tic.indexToRowCol(board, 4);
-    var rowCol2 = tic.indexToRowCol(board, 2);
+    const board = tic.board(3, 3, "");
+    const rowCol1 = tic.indexToRowCol(board, 4);
+    const rowCol2 = tic.indexToRowCol(board, 2);
     // rowCol1 is: {"row": 1, "col": 1};
     // rowCol2 is {"row": 0, "col": 2};
 
@@ -457,9 +442,9 @@ You can either set the cell in the `board` argument passed in... and return it, 
 __Example:__
 
     // sets two squares, one X and one O
-    var board = tic.generateBoard(3, 3, " ");
-    var b1 = tic.setBoardCell(board, "X", 1, 1);
-    var b2 = tic.setBoardCell(b1, "O", 0, 2);
+    const board = tic.board(3, 3, "");
+    const b1 = tic.setBoardCell(board, "X", 1, 1);
+    const b2 = tic.setBoardCell(b1, "O", 0, 2);
     // b1 is [" ", " ", " ", " ", "X", " ", " ", " ", " "];
     // b2 is [" ", " ", "O", " ", "X", " ", " ", " ", " "];
 
@@ -529,7 +514,7 @@ Use the `setBoardCell` function you created above to implement this.
 __Example:__
 
     // X and O are placed on the board
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "B2");
     board = tic.placeLetter(board, 'O', "A3");
     // board is [" ", " ", "O", " ", "X", " ", " ", " ", " "]
@@ -597,7 +582,7 @@ Hint: One way of dealing with the row label is to use [String.fromCodePoint](htt
 __Example:__
 
     // a string representation of a board with two moves
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "B2");
     board = tic.placeLetter(board, 'O', "A3");
     // board will be equal to the following string:
@@ -621,25 +606,25 @@ Examines the `board` passed in to see if any row is completely filled by a singl
 
 Hint: There are many possible implementations. One space inefficient way is to extract each row into its own `Array` and check if all of the `Array` elements are the same (or if you want to get fancy / sophisticated, you can use an Array's [every](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/every) method). Alternatively, you can check the value of the first element in a row and make sure any subsequent elements don't deviate from that first element.
 
-Additionally... your previous implementation of `rowColToIndex` may be helpful here if you end up using nested loops to iterate through rows and columns.
+Additionally... your previous implementation of `toIndex` may be helpful here if you end up using nested loops to iterate through rows and columns.
 
 __Example:__
 
     // row B is filled with X, X wins
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "B1");
     board = tic.placeLetter(board, 'X', "B2");
     board = tic.placeLetter(board, 'X', "B3");
     console.log(tic.getWinnerRows(board)); // --> 'X'
 
     // row B is partially filled, no winner
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "B1");
     board = tic.placeLetter(board, 'X', "B2");
     console.log(tic.getWinnerRows(board)); // --> undefined
 
     // row B is partially filled, no winner
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "B2");
     board = tic.placeLetter(board, 'X', "B3");
     console.log(tic.getWinnerRows(board)); // --> undefined
@@ -665,20 +650,20 @@ See the hints for `getWinnerRows`.
 __Example:__
 
     // Column 2 is filled with X, X wins
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "A2");
     board = tic.placeLetter(board, 'X', "B2");
     board = tic.placeLetter(board, 'X', "C2");
     console.log(tic.getWinnerCols(board)); // --> 'X'
 
     // Column 2 is partially filled, no winner
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "A2");
     board = tic.placeLetter(board, 'X', "B2");
     console.log(tic.getWinnerCols(board)); // --> undefined
 
     // Column 2 is partially filled, no winner
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "B2");
     board = tic.placeLetter(board, 'X', "C2");
     console.log(tic.getWinnerCols(board)); // --> undefined
@@ -704,21 +689,21 @@ See the hints for `getWinnerRows`.
 __Example:__
 
     // a diagonal is filled with X, X wins
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "A1");
     board = tic.placeLetter(board, 'X', "B2");
     board = tic.placeLetter(board, 'X', "C3");
     console.log(tic.getWinnerDiagonals(board)); // --> 'X'
 
     // a diagonal is filled with X, X wins
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "A3");
     board = tic.placeLetter(board, 'X', "B2");
     board = tic.placeLetter(board, 'X', "C1");
     console.log(tic.getWinnerDiagonals(board)); // --> 'X'
 
     // a diagonal is partially filled with X, no winner
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "A3");
     board = tic.placeLetter(board, 'O', "B2");
     board = tic.placeLetter(board, 'X', "C1");
@@ -746,11 +731,11 @@ Hint: The solution to this is pretty straightforward with a simple for loop, but
 __Example:__
 
     // board is empty
-    var board = tic.generateBoard(3, 3, " ");
+    const board = tic.board(3, 3, "");
     console.log(tic.isBoardFull(board)); // --> false
 
     // board is completely full
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "A1");
     board = tic.placeLetter(board, 'X', "A2");
     board = tic.placeLetter(board, 'X', "A3");
@@ -794,20 +779,20 @@ Using the `board` passed in, determines whether or not a move to `row` and `col`
 * targets an empty square
 * is within the boundaries of the board
 
-Use a previous function that you created, `rowColToIndex` in the implementation of this function. Again, you can __assume that the space character, `" "`, represents empty__.
+Use a previous function that you created, `toIndex` in the implementation of this function. Again, you can __assume that the space character, `" "`, represents empty__.
 
 __Example:__
 
 	// a valid move
-    var board = tic.generateBoard(3, 3, " ");
+    const board = tic.board(3, 3, "");
     console.log(tic.isValidMove(board, 1, 1)); // --> true
 
 	// move is out of bounds, not valid
-    var board = tic.generateBoard(3, 3, " ");
+    const board = tic.board(3, 3, "");
     console.log(tic.isValidMove(board, 3, 3)); // --> false
 
 	// move into square that's already occupied, not valid
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'O', "B2");
     console.log(tic.isValidMove(board, 1, 1)); // --> false
 
@@ -830,14 +815,14 @@ Using the `board` passed in, determines whether or not a move to `algebraicNotat
 
 __Example:__
 
-    var board = tic.generateBoard(3, 3, " ");
+    const board = tic.board(3, 3, "");
     // a valid move
     console.log(tic.isValidMoveAlgebraicNotation(board, 'B2')) // --> true
     // row is out of bounds
     console.log(tic.isValidMoveAlgebraicNotation(board, 'D2')) // --> false
 
     // target square is not empty, not a valid move
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "A3");
     console.log(tic.isValidMoveAlgebraicNotation(board, 'A3')) // --> false
 
@@ -860,7 +845,7 @@ Finds the index of an empty square on the board. If there are many empty squares
 __Example:__
 
     // there's only one empty cell... the middle square (index 4)
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "A1");
     board = tic.placeLetter(board, 'X', "A2");
     board = tic.placeLetter(board, 'X', "A3");
@@ -869,21 +854,21 @@ __Example:__
     board = tic.placeLetter(board, 'X', "C1");
     board = tic.placeLetter(board, 'X', "C2");
     board = tic.placeLetter(board, 'X', "C3");
-    var i = tic.getRandomEmptyCellIndex(board);
+    const i = tic.getRandomEmptyCellIndex(board);
     // i is 4
 
     // the entire second row is empty (index 3, 4, or 5)
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "A1");
     board = tic.placeLetter(board, 'X', "A2");
     board = tic.placeLetter(board, 'X', "A3");
     board = tic.placeLetter(board, 'X', "C1");
     board = tic.placeLetter(board, 'X', "C2");
     board = tic.placeLetter(board, 'X', "C3");
-    var i = tic.getRandomEmptyCellIndex(board);
+    const i = tic.getRandomEmptyCellIndex(board);
     // i is 3, 4, or 5
 
-    var board = tic.generateBoard(3, 3, " ");
+    let board = tic.board(3, 3, "");
     board = tic.placeLetter(board, 'X', "A1");
     board = tic.placeLetter(board, 'X', "A2");
     board = tic.placeLetter(board, 'X', "A3");
@@ -893,7 +878,7 @@ __Example:__
     board = tic.placeLetter(board, 'X', "C1");
     board = tic.placeLetter(board, 'X', "C2");
     board = tic.placeLetter(board, 'X', "C3");
-    var i = tic.getRandomEmptyCellIndex(board);
+    const i = tic.getRandomEmptyCellIndex(board);
     // i is undefined
 
 ### Checking Your Code, Pushing Your Changes
@@ -946,10 +931,10 @@ You'll write your Tic Tac Toe game in the file called `src/game.js`. Your first 
 1. bring in the module you created by using `require`
     <pre><code data-trim contenteditable>// you can name the object whatever you like
 // "tic" is used below...
-var tic = require('./tic-tac-toe.js');
+const tic = require('./tic-tac-toe.js');
 </code></pre>
 2. bring in the module, `readline-sync`, which you installed in the preparation portion of the homework
-    <pre><code data-trim contenteditable>var readlineSync = require('readline-sync');
+    <pre><code data-trim contenteditable>const readlineSync = require('readline-sync');
 </code></pre>
 
 ### User Controlled Game Settings
@@ -959,9 +944,9 @@ Start the game by prompting the user to set up some game options. Use `readline-
 Here's some example usage:
 
 <pre><code data-trim contenteditable>
-var readlineSync = require('readline-sync');
+const readlineSync = require('readline-sync');
  
-var answer = readlineSync.question('What is the meaning of life?');
+const answer = readlineSync.question('What is the meaning of life?');
 console.log(answer);
 </code></pre>
 
@@ -1073,7 +1058,7 @@ Press <ENTER> to show computer's move...
 <br>
 __Here's an example game:__
 
-<div markdown="block" class="img">
+<div markdown="block" class="img" id="hw01-tic-tac-toe-sample">
 ![example game](../resources/img/hw01-example-game.gif)
 </div>
 
@@ -1224,7 +1209,7 @@ We can use this feature to supply an `Array` of moves (each represented by a 2-e
 
 To capture the commandline argument, you can use this line:
 
-<pre><code data-trim contenteditable>var computerMoves = process.argv[2]
+<pre><code data-trim contenteditable>const computerMoves = process.argv[2]
 </code></pre>
 
 Now... instead of just randomly choosing the computer's move, you can consume the moves from the Array passed in.
@@ -1232,7 +1217,7 @@ Now... instead of just randomly choosing the computer's move, you can consume th
 __To implement this feature...__
 
 1. At the beginning of your file, use `process.argv` to access the passed in argument... and use `JSON.parse` to turn it into an actual nested `Array`
-    <pre><code data-trim contenteditable>var computerMoves = process.argv[2] ? JSON.parse(process.argv[2]) : undefined;
+    <pre><code data-trim contenteditable>const computerMoves = process.argv[2] ? JSON.parse(process.argv[2]) : undefined;
 </code></pre>
 2. Notify the user that the computer is using scripted moves: `Computer will make the following moves: [ [ 0, 0 ], [ 0, 1 ], [ 0, 2 ] ]`
 3. When the computer moves
@@ -1245,11 +1230,11 @@ __To implement this feature...__
 // and it is an Array of 2-element Arrays like [[0, 0], [0, 1], ...]
         
 // the move the computer will make
-var move; 
+let move; 
 
 // do we have an Array of scripted moves and are there moves left?
 if(computerMoves && computerMoves.length > 0) {
-    var arr = computerMoves.splice(0, 1)[0];
+    const arr = computerMoves.splice(0, 1)[0];
     // make sure it's a valid move!
     if(tic.isValidMove(board, arr[0], arr[1])) {
         move = {'row':arr[0], 'col':arr[1]};
@@ -1285,8 +1270,8 @@ The top scoring words are:
 1. Find `enable1.txt` in your `data` folder - this is your word list
 2. Find `scrabble.js` in your `src` folder - this is where you'll write your program
 3. In `scrabble.js`, require the built-in `readline` and `fs` modules:
-    <pre><code data-trim contenteditable>var readline = require('readline');
-var fs = require('fs');
+    <pre><code data-trim contenteditable>const readline = require('readline');
+const fs = require('fs');
 </code></pre>	
 
 ### Background Material and Callbacks
@@ -1303,10 +1288,10 @@ __Input from the user__
 
 When `question` is called, a callback function, `handleUserInput` is passed in. This callback function isn't called immediately! Instead, it's called after the program receives input from the user. Consequently, the line printing `last line of program` is called before `'Hi ' + response` could be printed out.
 
-<pre><code data-trim contenteditable>var readline = require('readline');
+<pre><code data-trim contenteditable>const readline = require('readline');
 
 // set up a readline object that can be used for gathering user input
-var userPrompt = readline.createInterface({
+const userPrompt = readline.createInterface({
     input: process.stdin,
     output: process.stdout
 });
@@ -1325,10 +1310,10 @@ console.log('last line of program!');
 
 __Line by line input from a file__ 
 
-<pre><code data-trim contenteditable>var readline = require('readline');
-var fs = require('fs');
-var fileName = 'test.txt';
-var n = 0;
+<pre><code data-trim contenteditable>const readline = require('readline');
+const fs = require('fs');
+const fileName = 'test.txt';
+const n = 0;
 
 // set up a readline object that can be used for reading data from a file
 // line by line
@@ -1361,7 +1346,7 @@ console.log('last line of program!');
 
 The score for a word is calculated by summing the point values of each letter in the word. You can use the following object to associate letters with point values:
 
-<pre><code data-trim contenteditable>var letterValues = { 
+<pre><code data-trim contenteditable>const letterValues = { 
         "E": 1, "A": 1, "I": 1, "O": 1, "N": 1, "R": 1, "T": 1, "L": 1, "S": 1, "U": 1, 
         "D": 2, "G": 2, "B": 3, "C": 3, "M": 3, "P": 3, "F": 4, "H": 4, "V": 4, "W": 4, 
         "Y": 4, "K": 5, "J": 8, "X": 8, "Q": 10, "Z": 10 
@@ -1372,7 +1357,7 @@ You'll likely want to represent each word as an object... with the actual word a
 
 The `sort` method also requires a callback function... which is used to compare the values in the `Array`. Check out the following example where the `Array`, `numbers` is sorted from highest to lowest:
 
-<pre><code data-trim contenteditable>var numbers = [1, 3, 2, 7, 5, 4, 6];
+<pre><code data-trim contenteditable>const numbers = [1, 3, 2, 7, 5, 4, 6];
 
 // sort numbers from highest to lowest
 numbers.sort(function(a, b) {
@@ -1413,12 +1398,12 @@ __Dealing with scope and callbacks__
 
 Because you'll be writing a lot of callback functions, you may find that you don't have access to certain variables because they're within the local scope of another function. Here's an example:
 
-<pre><code data-trim contenteditable>var readline = require('readline');
+<pre><code data-trim contenteditable>const readline = require('readline');
 
 function main() {
-    var greeting = "Hello ";
+    const greeting = "Hello ";
 
-    var userPrompt = readline.createInterface({
+    const userPrompt = readline.createInterface({
         input: process.stdin,
         output: process.stdout
     });
@@ -1443,12 +1428,12 @@ Because greeting is within the local scope of `main`. Assuming you want to keep 
 
 * (easy, but sloppy) using a lot of global variables - just move the declaration of `greeting` outside of `main`
 * (easy, slightly less sloppy) nest functions within other functions if you need inner function to access variables in the outer function 
-    <pre><code data-trim contenteditable>var readline = require('readline');
+    <pre><code data-trim contenteditable>const readline = require('readline');
     
     function main() {
-    var greeting = "Hello ";
+    const greeting = "Hello ";
 
-    var userPrompt = readline.createInterface({
+    const userPrompt = readline.createInterface({
         input: process.stdin,
         output: process.stdout
     });
@@ -1463,12 +1448,12 @@ Because greeting is within the local scope of `main`. Assuming you want to keep 
 main();
 </code></pre>
 * (difficult) pass the necessary variables to the function as arguments, and then fix the arity by using an anonymous function (that is, fix the values of a function's parameters) when using the function as a callback:
-    <pre><code data-trim contenteditable>var readline = require('readline');
+    <pre><code data-trim contenteditable>const readline = require('readline');
     
     function main() {
-    var greeting = "Hello ";
+    const greeting = "Hello ";
 
-    var userPrompt = readline.createInterface({
+    const userPrompt = readline.createInterface({
         input: process.stdin,
         output: process.stdout
     });
@@ -1484,12 +1469,12 @@ function handleUserInput(userPrompt, greeting, response) {
 main();
 </code></pre>
 * (difficult) pass the necessary variables to the function as arguments, and then fix the arity of the callback by using [bind](https://www.google.com/search?q=js+bind&oq=js+bind&aqs=chrome..69i57j0l5.1794j0j4&sourceid=chrome&ie=UTF-8)
-    <pre><code data-trim contenteditable>var readline = require('readline');
+    <pre><code data-trim contenteditable>const readline = require('readline');
 
     function main() {
-    var greeting = "Hello ";
+    const greeting = "Hello ";
 
-    var userPrompt = readline.createInterface({
+    const userPrompt = readline.createInterface({
         input: process.stdin,
         output: process.stdout
     });
